plugins {
    id 'java'
    id "org.springframework.boot" version "3.4.1"
    id "io.freefair.lombok" version "8.11"

}

group = 'com.gubu.buffer'
version = '1.0.0'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = "21"
}



dependencies {
    //implementation dependencies
    implementation platform('org.springframework.boot:spring-boot-dependencies:3.4.1') //spring boot bom
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.postgresql:postgresql:42.7.4'
}

test {
    useJUnitPlatform()
}